==============================================
 'gschem and Friends' Electronic Design Suite
==============================================

Copyright (C) 1998-2011 gEDA Developers

This file documents important user-visible changes in gEDA/gaf.  For
more information, please consult the `ChangeLog' file.

Notable changes in gEDA/gaf 1.7.0
=================================

* `gschem' no longer supports the `-t' option. It supports a new `-V'
  option to display version information.

* `gschem' now provides a "Select All" function, which is bound to
  <Control a> by default.

* In the `gschem' "Add component" dialog, filtering the component
  library will expand matching libraries.  If the filter is cancelled,
  all libraries are collapsed.  Components can now be selected by
  double-clicking on them in the component list.

* The `gschem' "Edit Text Properties" dialog now has an easier to use
  "Alignment" menu.

* PNG export from `gschem' will now be cropped correctly.

* Printed text size now better matches on-screen text size in
  `gschem'.

* Special characters, including commas, are now escaped or quoted
  appropriately in `gattrib' CSV output.

* Several `gnetlist' backends have now been fixed so that it should no
  longer be necessary to set an expanded Guile stack in gEDA's config
  files.

* The `partlist' backends for `gnetlist' now handle hierarchical
  refdes correctly.

* The `spice-sdb' backend for `gnetlist' now supports probes
  (`TESTPOINT' devices).

* On Windows, `gschem' and `gattrib' will no longer launch with a
  command window visible.

* The undocumented `mk_verilog_syms' program is no longer installed.
  The symbols it creates are still installed to
  `${prefix}/share/gEDA/sym/verilog'.

Notable changes in gEDA/gaf 1.6.1
=================================

* Added accelerator mnemonics for root menus in gschem

* Lots of updated and new language translations in libgeda, gschem, and
  gattrib.  (Courtesy of language translators and Launchpad) 